--- a/microservice_api/Dockerfile
+++ b/microservice_api/Dockerfile
@@ -11,7 +11,6 @@ WORKDIR /app
 # Copy the requirements file into the container at /app
 COPY microservice_api/requirements.txt /app/
 
-
 # Install any needed packages specified in requirements.txt
 RUN pip install --upgrade pip 
 RUN pip install -r requirements.txt
@@ -19,6 +18,12 @@ RUN pip install -r requirements.txt
 # Copy the current directory contents into the container at /app
 COPY microservice_api/. /app/
 
+COPY microservice_api/entrypoint.sh /app/
+RUN chmod +x ./entrypoint.sh
+
+ENTRYPOINT [ "/app/entrypoint.sh" ]
 
 # Expose the port that the app will run on
 EXPOSE 8000
+
+# CMD ["python", "manage.py", "runserver", "0.0.0.0:8000" ]
