--- a/microservice_api/requirements.txt
+++ b/microservice_api/requirements.txt
@@ -1,6 +1,6 @@
 Django==4.2.7
+django-cors-headers==4.3.1
 djangorestframework-simplejwt==5.3.0
 djangorestframework==3.14.0
-pyotp==2.9.0
-pyotp
 psycopg2-binary
+pyotp==2.9.0
