--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -62,8 +62,8 @@ services:
             - ./microservice_api:/api
         networks:
             - brokers_network
-        # environment:
-        #     KAFKA_BROKERCONNECT: "kafka:9092"
+        environment:
+            KAFKA_BROKERCONNECT: "kafka:9092"
 
     
 
@@ -210,7 +210,7 @@ services:
 
     # database_inventory:
     #     build:
-    #         dockerfile: ./ecommerce/database_inventory/Dockerfile
+    #         dockerfile: ./database_inventory/Dockerfile
     #     restart: always
     #     ports:
     #         - '5434:${POSTGRES_PORT}'
@@ -219,11 +219,11 @@ services:
     #     env_file:
     #         - .env
     #     volumes:
-    #         - ./data/database_inventory:/var/lib/database_inventory/data
+    #         - ./database_inventory:/var/lib/database_inventory/data
     #     environment:
-    #         POSTGRES_USER: ${DATABASE_ANALYTICS_POSTGRES_USER}
-    #         POSTGRES_PASSWORD: ${DATABASE_ANALYTICS_POSTGRES_PASSWORD}
-    #         POSTGRES_DB: ${DATABASE_ANALYTICS_POSTGRES_DATABASE_NAME}
+    #         POSTGRES_USER: ${DATABASE_INVENTORY_POSTGRES_USER}
+    #         POSTGRES_PASSWORD: ${DATABASE_INVENTORY_POSTGRES_PASSWORD}
+    #         POSTGRES_DB: ${DATABASE_INVENTORY_POSTGRES_DATABASE_NAME}
     #     healthcheck:
     #         test: [“CMD-SHELL”, “pg_isready”]
     #         interval: 1s
@@ -298,21 +298,21 @@ services:
 
 
     # # Database administrator
-    # pgadmin:
-    #     image: dpage/pgadmin4
-    #     container_name: postgres_main
-    #     environment:
-    #         PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
-    #         PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
-    #         PGADMIN_LISTEN_PORT: ${PGADMIN_LISTEN_PORT}
-    #         # PGADMIN_CONFIG_SERVER_MODE: ${PGADMIN_CONFIG_SERVER_MODE}
-    #     ports:
-    #         - "5050:${PGADMIN_LISTEN_PORT}"
-    #     volumes:
-    #         - ./data/pgadmin4:/var/lib/pgadmin4/data
-    #     networks:
-    #         - database_network
-    #     restart: unless-stopped
+    pgadmin:
+        image: dpage/pgadmin4
+        container_name: postgres_main
+        environment:
+            PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
+            PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
+            PGADMIN_LISTEN_PORT: ${PGADMIN_LISTEN_PORT}
+            # PGADMIN_CONFIG_SERVER_MODE: ${PGADMIN_CONFIG_SERVER_MODE}
+        ports:
+            - "5050:${PGADMIN_LISTEN_PORT}"
+        volumes:
+            - ./data/pgadmin4:/var/lib/pgadmin4/data
+        networks:
+            - database_network
+        restart: unless-stopped
 
     
 networks:
