--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,47 +6,47 @@ x-kafkaBrokers: &kafkaBrokers "kafka-1:9092"
 
 services:
     # Brokers
-    # zookeeper:
-    #     image: confluentinc/cp-zookeeper:7.2.6
-    #     restart: always
-    #     networks:
-    #         - brokers_network
-    #     environment:
-    #         ZOOKEEPER_CLIENT_PORT: 2181
-    #         ZOOKEEPER_TICK_TIME: 2000
-    #     ports:
-    #         - 2181:2181
-    #     volumes:
-    #         - ./kafka-data/zookeeper:/var/lib/zookeeper/data
-    #         - ./kafka-data/zookeeper-logs:/var/lib/zookeeper/log
-    # kafka:
-    #     image: confluentinc/cp-kafka:7.2.6
-    #     networks:
-    #         - brokers_network
-    #     depends_on:
-    #         - zookeeper
-    #     ports:
-    #         - 9092:9092
-    #         - 29092:29092
-    #     environment:
-    #         KAFKA_BROKER_ID: 1
-    #         KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-    #         KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092,PLAINTEXT_HOST://localhost:29092
-    #         KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
-    #         KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
-    #         KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-    #     volumes:
-    #         - ./kafka-data/kafka:/var/lib/kafka/data
+    zookeeper:
+        image: confluentinc/cp-zookeeper:7.2.6
+        restart: always
+        networks:
+            - brokers_network
+        environment:
+            ZOOKEEPER_CLIENT_PORT: 2181
+            ZOOKEEPER_TICK_TIME: 2000
+        ports:
+            - 2181:2181
+        volumes:
+            - ./kafka-data/zookeeper:/var/lib/zookeeper/data
+            - ./kafka-data/zookeeper-logs:/var/lib/zookeeper/log
+    kafka:
+        image: confluentinc/cp-kafka:7.2.6
+        networks:
+            - brokers_network
+        depends_on:
+            - zookeeper
+        ports:
+            - 9092:9092
+            - 29092:29092
+        environment:
+            KAFKA_BROKER_ID: 1
+            KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+            KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092,PLAINTEXT_HOST://localhost:29092
+            KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+            KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+            KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+        volumes:
+            - ./kafka-data/kafka:/var/lib/kafka/data
     
-    # kafdrop:
-    #     image: obsidiandynamics/kafdrop
-    #     restart: "no"
-    #     ports:
-    #         - "9000:9000"
-    #     environment:
-    #         KAFKA_BROKERCONNECT: "kafka:9092"
-    #     networks:
-    #         - brokers_network
+    kafdrop:
+        image: obsidiandynamics/kafdrop
+        restart: "no"
+        ports:
+            - "9000:9000"
+        environment:
+            KAFKA_BROKERCONNECT: "kafka:9092"
+        networks:
+            - brokers_network
 
 
     # microservices
@@ -101,7 +101,7 @@ services:
     #     depends_on:
     #         database_analytics:
     #             condition: service_healthy
- 
+
     microservice_inventory:
         restart: on-failure:10
         build:
