Users model updated

--- a/microservice_users/Dockerfile
+++ b/microservice_users/Dockerfile
@@ -14,10 +14,10 @@ COPY wait-for-it.sh /wait-for-it.sh
 
 RUN chmod +x /wait-for-it.sh
 
-ENV DATABASE_NAME POSTGRES_DATABASE_NAME
+ENV DATABASE_NAME POSTGRES_DB
 ENV USER POSTGRES_USER
 ENV PASSWORD POSTGRES_PASSWORD
 ENV HOST POSTGRES_HOST
-ENV PORT $POSTGRES_PORT
+ENV PORT POSTGRES_PORT
 
 # CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
