Added autorestart while developing django

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -70,6 +70,9 @@ services:
             POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
             POSTGRES_HOST: postgres
             POSTGRES_PORT: ${POSTGRES_PORT}
+        volumes:
+            - ./microservice_users/:/app
+        
 
     
 
