Added cache blacklist token

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -70,242 +70,9 @@ services:
             POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
             POSTGRES_HOST: postgres
             POSTGRES_PORT: ${POSTGRES_PORT}
+            DJANGO_SECRET_KEY: ${DJANGO_SECRET_KEY}
         volumes:
             - ./microservice_users/:/app
-        
-
-    
-
-
-
-
-
-
-
-
-
-    # microservice_analytics:
-    #     restart: on-failure:10
-    #     build:
-    #         dockerfile: ./ecommerce/microservice_analytics/Dockerfile
-    #         args:
-    #             POSTGRES_USER: ${DATABASE_ANALYTICS_POSTGRES_USER}
-    #             POSTGRES_PASSWORD: ${DATABASE_ANALYTICS_POSTGRES_PASSWORD}
-    #             POSTGRES_DB: ${DATABASE_ANALYTICS_POSTGRES_DATABASE_NAME}
-    #             POSTGRES_HOST: ${DATABASE_ANALYTICS_POSTGRES_HOST}
-    #     ports:
-    #         - "8001:8001"
-    #     env_file:
-    #         - .env
-    #     environment:
-    #         POSTGRES_USER: ${DATABASE_ANALYTICS_POSTGRES_USER}
-    #         POSTGRES_PASSWORD: ${DATABASE_ANALYTICS_POSTGRES_PASSWORD}
-    #         POSTGRES_DB: ${DATABASE_ANALYTICS_POSTGRES_DATABASE_NAME}
-    #         POSTGRES_HOST: database_analytics
-    #         POSTGRES_PORT: ${POSTGRES_PORT}
-    #         KAFKA_BROKERCONNECT: "kafka:9092"
-    #     networks:
-    #         - brokers_network
-    #         - database_analytics_network
-    #     depends_on:
-    #         database_analytics:
-    #             condition: service_healthy
-
-    # microservice_inventory:
-    #     restart: always
-    #     build:
-    #         dockerfile: ./microservice_inventory/Dockerfile
-    #         args:
-    #             POSTGRES_USER: ${DATABASE_INVENTORY_POSTGRES_USER}
-    #             POSTGRES_PASSWORD: ${DATABASE_INVENTORY_POSTGRES_PASSWORD}
-    #             POSTGRES_DB: ${DATABASE_INVENTORY_POSTGRES_DATABASE_NAME}
-    #             POSTGRES_HOST: ${DATABASE_INVENTORY_POSTGRES_HOST}
-    #     ports:
-    #         - "8001:8001"
-    #     env_file:
-    #         - .env
-    #     environment:
-    #         POSTGRES_USER: ${DATABASE_INVENTORY_POSTGRES_USER}
-    #         POSTGRES_PASSWORD: ${DATABASE_INVENTORY_POSTGRES_PASSWORD}
-    #         POSTGRES_DB: ${DATABASE_INVENTORY_POSTGRES_DATABASE_NAME}
-    #         POSTGRES_HOST: database_inventory
-    #         POSTGRES_PORT: ${POSTGRES_PORT}
-    #         KAFKA_BROKERCONNECT: "kafka:9092"
-    #     networks:
-    #         - brokers_network
-    #         - database_network
-    #     depends_on:
-    #         - zookeeper
-    #         - kafka
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-        # command: ["./ecommerce/backend_analytics/wait_for_it.sh", "database_analytics:5432", "--", "python", "create_db.py"]
-
-    # Postgres Databases
-    # database_analytics:
-    #     build:
-    #         dockerfile: ./ecommerce/database_analytics/Dockerfile
-    #     restart: always
-    #     ports:
-    #         - '5432:${POSTGRES_PORT}'
-    #     networks:
-    #         - database_analytics_network
-    #     env_file:
-    #         - .env
-    #     volumes:
-    #         - ./data/database_analytics:/var/lib/database_analytics/data
-    #     environment:
-    #         POSTGRES_USER: ${DATABASE_ANALYTICS_POSTGRES_USER}
-    #         POSTGRES_PASSWORD: ${DATABASE_ANALYTICS_POSTGRES_PASSWORD}
-    #         POSTGRES_DB: ${DATABASE_ANALYTICS_POSTGRES_DATABASE_NAME}
-    #     healthcheck:
-    #         test: ["CMD-SHELL", "sh -c 'pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}'"]
-    #         interval: 10s
-    #         timeout: 3s
-    #         retries: 3
-
-    # database_users:
-    #     build:
-    #         dockerfile: ./ecommerce/database_users/Dockerfile
-    #     restart: always
-    #     ports:
-    #         - '5433:${POSTGRES_PORT}'
-    #     networks:
-    #         - database_network
-    #     env_file:
-    #         - .env
-    #     volumes:
-    #         - ./data/database_users:/var/lib/database_users/data
-    #     environment:
-    #         POSTGRES_USER: ${DATABASE_USERS_POSTGRES_USER}
-    #         POSTGRES_PASSWORD: ${DATABASE_USERS_POSTGRES_PASSWORD}
-    #         POSTGRES_DB: ${DATABASE_USERS_POSTGRES_DATABASE_NAME}
-    #     healthcheck:
-    #         test: [“CMD-SHELL”, “pg_isready”]
-    #         interval: 1s
-    #         timeout: 5s
-    #         retries: 10
-    # database_inventory:
-    #     image: postgres
-    #     restart: always
-    #     env_file:
-    #         - .env
-    #     networks:
-    #         - database_network
-    #     environment:
-    #         POSTGRES_USER: ${DATABASE_INVENTORY_POSTGRES_USER}
-    #         POSTGRES_PASSWORD: ${DATABASE_INVENTORY_POSTGRES_PASSWORD}
-    #         POSTGRES_DB: ${DATABASE_INVENTORY_POSTGRES_DATABASE_NAME}
-    #     volumes:
-    #         - ./data/database_inventory:/var/lib/database_inventory/data
-    #     healthcheck:
-    #         test: curl --fail http://localhost || exit 1
-    #         interval: 60s
-    #         retries: 5
-    #         start_period: 20s
-    #         timeout: 10s
-
-    # database_inventory:
-    #     build:
-    #         dockerfile: ./database_inventory/Dockerfile
-    #     restart: always
-    #     ports:
-    #         - '5434:${POSTGRES_PORT}'
-    #     networks:
-    #         - database_network
-    #     env_file:
-    #         - .env
-    #     volumes:
-    #         - ./database_inventory:/var/lib/database_inventory/data
-    #     environment:
-    #         POSTGRES_USER: ${DATABASE_INVENTORY_POSTGRES_USER}
-    #         POSTGRES_PASSWORD: ${DATABASE_INVENTORY_POSTGRES_PASSWORD}
-    #         POSTGRES_DB: ${DATABASE_INVENTORY_POSTGRES_DATABASE_NAME}
-    #     healthcheck:
-    #         test: [“CMD-SHELL”, “pg_isready”]
-    #         interval: 1s
-    #         timeout: 5s
-    #         retries: 10
-    
-    # database_marketing:
-    #     build:
-    #         dockerfile: ./ecommerce/database_marketing/Dockerfile
-    #     restart: always
-    #     ports:
-    #         - '5435:${POSTGRES_PORT}'
-    #     networks:
-    #         - database_network
-    #     env_file:
-    #         - .env
-    #     volumes:
-    #         - ./data/database_marketing:/var/lib/database_marketing/data
-    #     environment:
-    #         POSTGRES_USER: ${DATABASE_MARKETING_POSTGRES_USER}
-    #         POSTGRES_PASSWORD: ${DATABASE_MARKETING_POSTGRES_PASSWORD}
-    #         POSTGRES_DB: ${DATABASE_MARKETING_POSTGRES_DATABASE_NAME}
-    #     healthcheck:
-    #         test: [“CMD-SHELL”, “pg_isready”]
-    #         interval: 1s
-    #         timeout: 5s
-    #         retries: 10
-
-    # database_orders:
-    #     build:
-    #         dockerfile: ./ecommerce/database_orders/Dockerfile
-    #     restart: always
-    #     ports:
-    #         - '5436:${POSTGRES_PORT}'
-    #     networks:
-    #         - database_network
-    #     env_file:
-    #         - .env
-    #     volumes:
-    #         - ./data/database_orders:/var/lib/database_orders/data
-    #     environment:
-    #         POSTGRES_USER: ${DATABASE_ORDERS_POSTGRES_USER}
-    #         POSTGRES_PASSWORD: ${DATABASE_ORDERS_POSTGRES_PASSWORD}
-    #         POSTGRES_DB: ${DATABASE_ORDERS_POSTGRES_DATABASE_NAME}
-    #     healthcheck:
-    #         test: [“CMD-SHELL”, “pg_isready”]
-    #         interval: 1s
-    #         timeout: 5s
-    #         retries: 10
-
-    # database_analytics:
-    #     build:
-    #         dockerfile: ./ecommerce/database_analytics/Dockerfile
-    #     restart: always
-    #     ports:
-    #         - '5436:${POSTGRES_ANALYTICS_PORT}'
-    #     networks:
-    #         - database_network
-    #     env_file:
-    #         - .env
-    #     volumes:
-    #         - ./data/database_analytics:/var/lib/database_analytics/data
-    #     environment:
-    #         POSTGRES_USER: ${DATABASE_ANALYTICS_POSTGRES_USER}
-    #         POSTGRES_PASSWORD: ${DATABASE_ANALYTICS_POSTGRES_PASSWORD}
-    #         POSTGRES_DB: ${DATABASE_ANALYTICS_POSTGRES_DATABASE_NAME}
-    #     healthcheck:
-    #         test: [“CMD-SHELL”, “pg_isready”]
-    #         interval: 1s
-    #         timeout: 5s
-    #         retries: 10
-
 
     # # Database administrator
     pgadmin:
@@ -338,7 +105,6 @@ services:
         networks:
             - database_network
 
-    
 networks:
     database_network:
         driver: bridge
@@ -348,9 +114,4 @@ networks:
 volumes:
     zookeeper: {}
     kafka1: {}
-    # database_analytics: {}
-    # database_marketing: {}
-    # database_orders: {}
-    # database_inventory: {}
-    # database_users: {}
     pgadmin: {}
