--- a/microservice_inventory/requirements.txt
+++ b/microservice_inventory/requirements.txt
@@ -1,4 +1,10 @@
-confluent-kafka==2.3.0
-kafka-python==2.0.2
-SQLAlchemy==1.4.37
+DateTime==5.4
+Django==4.1.2
+djangorestframework==3.14.0
+djangorestframework-simplejwt==5.3.1
+django-cors-headers==4.3.1
+gunicorn==21.2.0 
+mysqlclient==2.0.3
 psycopg2-binary==2.9.9
+python-json-logger==2.0.7
+pyjwt==2.8.0
