--- a/microservice_inventory/Dockerfile
+++ b/microservice_inventory/Dockerfile
@@ -20,3 +20,6 @@ ENV PASSWORD POSTGRES_PASSWORD
 ENV HOST POSTGRES_HOST
 ENV PORT POSTGRES_PORT
 ENV DJANGO_SECRET_KEY DJANGO_SECRET_KEY
+
+COPY ./microservice_inventory/entrypoint.sh /
+ENTRYPOINT [ "sh", "/entrypoint.sh" ]
