Added static route for microservice

--- a/default.conf
+++ b/default.conf
@@ -9,4 +9,7 @@ server{
 		proxy_pass http://microservice_inventory;
 		proxy_set_header Host $host;
 	}
+	location /inventory/static/ {
+        alias /etc/nginx/static/microservice_inventory/;
+    }
 }
